Cleanup (warnings; formatting)
GitOrigin-RevId: 41c8954b4016527d419ee9e3ae05fd048d429de3